# vibespecs

./: .gitignore  INSTALL.md  README.md  comparison_methodology.md  dashboard.html  key-anthropic.txt  key-openrouter.txt  metrics.py  strong_baselines.py
safe_scaffold/: INSTALL.md  README.md  dashboard.html  demo_server.py  pyproject.toml
safe_scaffold/docs/: elicitation_and_mutation.md  related_work.md  track1_task_specs.md
safe_scaffold/examples/: demo_eval.py  demo_task_validation.py  demo_track1_actions.py  demo_track1_basic.py  demo_track2_cryspen.py  demo_track2_server_verification.py  demo_z3_proves_invariant.py  viz_eval_dashboard.py
safe_scaffold/hooks/: claude_code_pretooluse.sh
safe_scaffold/paper/: PAPER.md  README.md  main.tex  references.bib
safe_scaffold/safe_scaffold/: __init__.py  cli.py  condition.py  conditions.py  human_loop.py  interceptor.py  paths.py  plan.py  policy.py  properties.py  spec.py  translator.py  verifier.py  world.py  world_model.py
safe_scaffold/safe_scaffold/adapters/: __init__.py  claude_code.py  shell.py
safe_scaffold/safe_scaffold/cross_check/: __init__.py  attack_lib.py  disagree.py  fixtures.py  generator.py  runner.py  spec.py
safe_scaffold/safe_scaffold/eval/: __init__.py  redteam.py  runner.py
safe_scaffold/safe_scaffold/lean_prelude/: SafeScaffold.lean  lake-manifest.json  lakefile.lean
safe_scaffold/safe_scaffold/lean_prelude/.lake/: lakefile.olean  lakefile.olean.trace
safe_scaffold/safe_scaffold/server_verifier/: __init__.py  adversarial.py  runner.py  spec.py
safe_scaffold/safe_scaffold/task_spec/: __init__.py  ablation.py  ambiguous_briefs.py  baselines.py  codegen.py  ears_emitter.py  elicitation.py  eval.py  invariants.py  lean_emitter.py  spec.py  spec_mutation.py  syntax_check.py  test_case_gen.py  validator.py  verify_pbt.py
safe_scaffold/tests/: test_adapters.py  test_ambiguous_briefs.py  test_behavioral_elicitation.py  test_cli.py  test_complex_tasks.py  test_conditions.py  test_cross_check.py  test_elicitation.py  test_eval.py  test_interceptor.py  test_lean_emitter.py  test_paths.py  test_plan.py  test_policy_and_verifier.py  test_properties.py  test_spec_mutation.py  test_syntax_check.py  test_task_spec.py  test_task_spec_rigorous.py  test_test_case_gen.py  test_translator.py  test_verifier.py  test_verify_pbt.py  test_world.py
(+12 files in other folders)
